--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "flatbuffers-retained"
 version = "0.1.0"
 edition = "2021"
+authors = ["Daniel Reiter Horn <danielrh@users.sourceforge.net>"]
+description = "This library allows a user to validate a flatbuffer once and the move it around or store it in a data structure without keeping the buffer borrowed. Then later it can be used again without re-validation."
+homepage = "https://github.com/danielrh/flatbuffers-retained"
+license = "BSD-2-Clause/MIT"
+documentation = "https://github.com/danielrh/flatbuffers-retained"
+repository = "https://github.com/danielrh/flatbuffers-retained"
+keywords = ["flatbuffers", "flatbuffer", "deserialization"]
+readme = "README.md"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
